--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
     <title>Angular2 Seed</title>
     <base href="/">
   </head>
-  <body>
+  <loginRequest>
 
     <app>
       Loading...
@@ -16,5 +16,5 @@
     <script src="/vendor.bundle.js"></script>
     <script src="/main.bundle.js"></script>
 
-  </body>
+  </loginRequest>
 </html>
