--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-
-    <title>Angular QuickStart</title>
+    <title>Project AIM</title>
 
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,12 +18,17 @@
     <script>
         System.import('app').catch(function(err){ console.error(err); });
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
 </head>
 <!-- 3. Display the application -->
 <body>
 
 <my-app>Loading...</my-app>
+
+<script src="bootstrap/js/jquery.js"></script>
+<script src="bootstrap/js/bootstrap.js"></script>
 
 </body>
 </html>
