Added frontend version 1.0

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,6 +19,7 @@
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/simple-sidebar.css" rel="stylesheet">
 </head>
 <!-- 3. Display the application -->
 <body>
