--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,6 +21,9 @@
 <script src="/vendor.bundle.js"></script>
 <script src="/main.bundle.js"></script>
 <script src="/frontend/src/ckeditor/ckeditor.js"></script>
+<script src="js/jquery-3.1.1.js"></script>
+<script src="js/bootstrap.js"></script>
+
 
 <script>
     initSample();
