--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,9 +3,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project AIM</title>
-    <script src="./ckeditor/ckeditor.js"></script>
-    <script src="js/ckEditorSample.js"></script>
-    <script src="js/addrowtotable.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -14,17 +11,19 @@
 
 <body>
 
-
 <app>
     Loading...
 </app>
 
+<script src="js/jquery-3.1.1.js"></script>
 <script src="/polyfills.bundle.js"></script>
 <script src="/vendor.bundle.js"></script>
 <script src="/main.bundle.js"></script>
 <script src="/frontend/src/ckeditor/ckeditor.js"></script>
-<script src="js/jquery-3.1.1.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="ckeditor/ckeditor.js"></script>
+<script src="js/ckEditorSample.js"></script>
+<script src="js/addrowtotable.js"></script>
 
 
 <script>
