--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,10 +19,11 @@
 <script src="/polyfills.bundle.js"></script>
 <script src="/vendor.bundle.js"></script>
 <script src="/main.bundle.js"></script>
-<script src="/frontend/src/ckeditor/ckeditor.js"></script>
 <script src="js/bootstrap.js"></script>
-<script src="ckeditor/ckeditor.js"></script>
+<!--<script src="ckeditor/ckeditor.js"></script>
 <script src="js/ckEditorSample.js"></script>
+<script src="/frontend/src/ckeditor/ckeditor.js"></script>
+-->
 <script src="js/addrowtotable.js"></script>
 
 
