facts component (frontend) #34 not final V0.9

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,16 +20,16 @@
 <script src="/vendor.bundle.js"></script>
 <script src="/main.bundle.js"></script>
 <script src="js/bootstrap.js"></script>
-<script src="ckeditor/ckeditor.js"></script>
+<!--<script src="ckeditor/ckeditor.js"></script>
 <script src="js/ckEditorSample.js"></script>
-<script src="/frontend/src/ckeditor/ckeditor.js"></script>
+<script src="/frontend/src/ckeditor/ckeditor.js"></script> -->
 
 <script src="js/addrowtotable.js"></script>
 
 
 <script>
-    initSample();
-    initSampleLong();
+    //initSample();
+    //initSampleLong();
 </script>
 </body>
 </html>
