--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,15 +18,10 @@
 <script src="/polyfills.bundle.js"></script>
 <script src="/vendor.bundle.js"></script>
 <script src="/main.bundle.js"></script>
+<script src="js/ckeditor/ckeditor.js"></script>
 <!-- Use this if the symbolic link is not working -->
 <!-- <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script> -->
 
 <script src="js/addrowtotable.js"></script>
-
-
-<script>
-    //initSample();
-    //initSampleLong();
-</script>
 </body>
 </html>
