new angular seed version

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,27 +1,18 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project AIM</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>Angular2 Seed</title>
     <base href="/">
-</head>
+  </head>
+  <body>
 
-<body>
+    <app>
+      Loading...
+    </app>
 
-<app>
-    Loading...
-</app>
+    <script async src="/main.bundle.js"></script>
 
-<script src="/polyfills.bundle.js"></script>
-<script src="/vendor.bundle.js"></script>
-<script src="/main.bundle.js"></script>
-<script src="js/ckeditor/ckeditor.js"></script>
-<!-- Use this if the symbolic link is not working -->
-<!-- <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script> -->
-
-<script src="js/addrowtotable.js"></script>
-</body>
+  </body>
 </html>
