--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,9 @@
   <meta charset=UTF-8>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Project AIM</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <base href="/">
 </head>
 <body>
@@ -16,7 +16,7 @@
 </app>
 
 <script async src="/main.bundle.js"></script>
-<script src="js/ckeditor/ckeditor.js"></script>
+<script src="/js/ckeditor/ckeditor.js"></script>
 <!-- Use this if the symbolic link is not working -->
 <!-- <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script> -->
 </body>
